register_toolchains(
    "//toolchains/python:python",
    "//toolchains/rpmbuild:redhat",
    "//toolchains/rpmbuild:no-rpmbuild",
    "//toolchains/cc:centos/6",
    "//toolchains/cc:centos/7",
    "//toolchains/cc:rockylinux/8",
    "//toolchains/cc:rockylinux/9",
    "//toolchains/cc:fedora/37",
    "//toolchains/cc:fedora/38",
    "//toolchains/cc:debian/11",
    "//toolchains/cc:debian/12",
    "//toolchains/cc:ubuntu/kinetic",
    "//toolchains/cc:ubuntu/lunar",
)

register_execution_platforms(
    "//platforms:centos/6",
    "//platforms:centos/7",
    "//platforms:debian/11",
    "//platforms:debian/12",
    "//platforms:fedora/37",
    "//platforms:fedora/38",
    "//platforms:rockylinux/8",
    "//platforms:rockylinux/9",
    "//platforms:ubuntu/kinetic",
    "//platforms:ubuntu/lunar",
)
