register_toolchains(
    "//toolchains/python",
    "//toolchains/rpmbuild",
    "//toolchains/cc:centos/6",
    "//toolchains/cc:centos/7",
    "//toolchains/cc:debian/11",
    "//toolchains/cc:debian/12",
    "//toolchains/cc:fedora/37",
    "//toolchains/cc:fedora/38",
    "//toolchains/cc:rockylinux/8",
    "//toolchains/cc:rockylinux/9",
    "//toolchains/cc:ubuntu/kinetic",
    "//toolchains/cc:ubuntu/lunar",
)
